# language-table-dev

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
language_table_dev/: main.py  process.py  tf.py  transform.py
src/language_table_dev/: __init__.py  main.py  observation.py  process.py  save.py  tf.py  transform.py
